--- a/html/TrafficP.html
+++ b/html/TrafficP.html
@@ -8,19 +8,19 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <title>www.Traffic.rules.violation.com</title>
-    <link rel="shortcut icon" type="image" href="1.png"> 
-    <link rel="stylesheet" href="TrafficP.css">
-    <link rel="stylesheet" href="responsive.css">
+    <link rel="shortcut icon" type="image" href="../img/1.png"> 
+    <link rel="stylesheet" href="../css/TrafficP.css">
+    <link rel="stylesheet" href="../css/responsive.css">
 </head>
 
 <body>
  
   <!-- heading  -->
 <div class="c1">
-  <img src="24.png" height="100" width="100%">
+  <img src="../img/24.png" height="100" width="100%">
   <div class="c2" >Highway  Police  Maharashtra  State</div>
-  <img id="p1" src="3.png">
-  <img id="p2" src="4.png">
+  <img id="p1" src="../img/3.png">
+  <img id="p2" src="../img/4.png">
 </div>
 
 
@@ -28,7 +28,7 @@
 <nav class="navbar background h-nav-resp">
   <ul class="nav-list v-class-resp">
       <div class="logo">
-          <img src="5.png" alt="LOGO">
+          <img src="../img/5.png" alt="LOGO">
       </div>
       <li><a href="#">Home</a></li>
       <li><a href="TrafficP.html" target="blank">Traffic Police</a></li>
@@ -46,7 +46,7 @@
 </nav>
 
       <div class="c5"><br>
-      <img id="p4" height="250px" src="8.jpg">
+      <img id="p4" height="250px" src="../img/8.jpg">
       <h1 id="p5"><b>Welcome</b> to Highway Police</h1>
       <h4 id="p6"><br><br>Highways connect cities and people and play vital role in economic development. More the economic development more is the traffic which can lead to congestion and accidents. Smooth, safe and congestion free traffic on highways is need of the hour. Highway Traffic Police (HSP), was established with sole aim to regulate, monitor and control traffic on the highways. Initially started with 23 Traffic Aid Posts (TAPs), today it has 63 TAPs all over Maharashtra ensuring safe and sound journey on the highways. Before HSP, the highways were looked after by local police authorities and that led to issues about coordination and differential approach as a highway passes through many cities and districts. Establishment of Highway State Police has achieved traffic management of highways under a single unified command. It has also achieved uniformity of use of modern technology and equipment’s towards traffic solutions for highways. Our endeavor is to ensure your smooth and safe journey on highways.</h4>
       <h4 id="p7">Mr. Kulwant K. Sarangal (IPS) <br>ADGP Traffic, Maharashtra</h4><br><br>
@@ -59,31 +59,31 @@
       <h3 id="p8"><b><br>SENIOR</b> POLICE OFFICERS</h3><br><br>
 <div class="c6">
     <div class="container1">
-      <img height="200px" width="200px" src="8.jpg" alt="Avatar" class="image">
+      <img height="200px" width="200px" src="../img/8.jpg" alt="Avatar" class="image">
       <div class="overlay">
       <div class="text"><small>Smt. Sunita Salunke- Thakare (IPS)<br>Superintendent of Police(HQ), Mumbai</small> </div>
       </div>
       </div>
     <div class="container1">
-      <img height="200px" width="200px" src="11.png" alt="Avatar" class="image">
+      <img height="200px" width="200px" src="../img/11.png" alt="Avatar" class="image">
       <div class="overlay">
       <div class="text"><small>Mohan Dahikar (IPS)<br>Superintendent of Police, HSP, Thane</small> </div>
        </div>
      </div>
      <div class="container1">
-        <img height="190px" width="200px" src="12.jpeg" alt="Avatar" class="image">
+        <img height="190px" width="200px" src="../img/12.jpeg" alt="Avatar" class="image">
        <div class="overlay">
           <div class="text"><small>Shri Sanjay Jadhav (IPS)<br>Superintendent of Police, HSP, Pune.</small> </div>
         </div>
      </div>
       <div class="container1">
-       <img height="200px" width="200px" src="13.jpeg" alt="Avatar" class="image">
+       <img height="200px" width="200px" src="../img/13.jpeg" alt="Avatar" class="image">
        <div class="overlay">
           <div class="text"><small>Smt. Shweta Khedkar<br>Superintendent of Police, HSP, Nagpur</small> </div>
         </div>
       </div>
        <div class="container1">
-        <img height="200px" width="200px" src="14.jpeg" alt="Avatar" class="image">
+        <img height="200px" width="200px" src="../img/14.jpeg" alt="Avatar" class="image">
         <div class="overlay">
           <div class="text"><small>Dr. Anita Jamadar<br>Superintendent of Police, HSP, Aurangabad</small> </div>
         </div>
@@ -99,7 +99,7 @@
           <div class="icon">
               <!-- <i class="fa fa-user-circle" aria-hidden="true">Accident investigation</i> -->
              <!-- <h3 id="p14"> Accident investigation</h3> -->
-             <img src="28.jpg" height="100%" width="100%" style="border: 2px solid black;">
+             <img src="../img/28.jpg" height="100%" width="100%" style="border: 2px solid black;">
           </div>
       </div>
     </div>
@@ -117,7 +117,7 @@
         <div class="content">
           <div class="icon">
               <!-- <i class="fa fa-user-circle" aria-hidden="true"></i> -->
-             <img src="29.jpg" height="100%" width="100%" style="border: 2px solid black;">
+             <img src="../img/29.jpg" height="100%" width="100%" style="border: 2px solid black;">
 
           </div>
       </div>
@@ -136,7 +136,7 @@
         <div class="content">
           <div class="icon">
               <!-- <i class="fa fa-user-circle" aria-hidden="true"></i> -->
-             <img src="30.png" height="100%" width="100%"style="border: 2px solid black;">
+             <img src="../img/30.png" height="100%" width="100%"style="border: 2px solid black;">
 
           </div>
       </div>
@@ -155,7 +155,7 @@
       <div class="content">
         <div class="icon">
              <!-- <i class="fa fa-user-circle" aria-hidden="true"></i> -->
-             <img src="31.jpeg" height="100%" width="100%" style="border: 2px solid black;">     
+             <img src="../img/31.jpeg" height="100%" width="100%" style="border: 2px solid black;">     
       </div>
     </div>
   </div>
@@ -169,7 +169,7 @@
 
  </div> 
 
-<br>
+<br><br><br>
 
 <center><h6>Click here for --> <a  class="c10"href="Complain.html"> Traffic Complain </a></h6></center>
 <br><br>
@@ -184,7 +184,7 @@
   </div>
 
  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
- <script src="responsive.js"></script>
+ <script src="../js/responsive.js"></script>
 
 </body>
 </html>
