--- a/html/fine.html
+++ b/html/fine.html
@@ -5,27 +5,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>www.Traffic.Fines.com</title>
-    <link rel="stylesheet" href="fine.css">
-    <link rel="stylesheet" href="responsive.css">
+    <link rel="stylesheet" href="../css/fine.css">
+    <link rel="stylesheet" href="../css/responsive.css">
 
-    <link rel="shortcut icon" type="image" href="1.png"> 
+    <link rel="shortcut icon" type="image" href="../img/1.png"> 
 
 </head>
 <body>
     
   <!-- heading  -->
 <div class="c4">
-  <img src="24.png" height="100" width="100%">
+  <img src="../img/24.png" height="100" width="100%">
   <div class="c2" >Highway  Police  Maharashtra  State</div>
-  <img id="p3" src="3.png">
-  <img id="p2" src="4.png">
+  <img id="p3" src="../img/3.png">
+  <img id="p2" src="../img/4.png">
 </div>
 
 
 <nav class="navbar background h-nav-resp">
   <ul class="nav-list v-class-resp">
       <div class="logo">
-          <img src="5.png" alt="LOGO">
+          <img src="../img/5.png" alt="LOGO">
       </div>
       <li><a href="#">Home</a></li>
       <li><a href="TrafficP.html" target="blank">Traffic Police</a></li>
@@ -147,7 +147,7 @@
       <p id="p12">@ This is the official website of Highway Police, Maharashtra State, India. All Rights Reserved. Powered By Calibre Technologies</p>
     </div>
   
-</div><script src="responsive.js"></script>
+</div><script src="../js/responsive.js"></script>
   <!-- <script src="try.js"></script> -->
 </body>
 </html>
