--- a/html/index.html
+++ b/html/index.html
@@ -8,19 +8,19 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <title>www.Traffic.rules.violation.com</title>
-    <link rel="shortcut icon" type="image" href="1.png"> 
-    <link rel="stylesheet" href="index.css">
-    <link rel="stylesheet" href="responsive.css">
+    <link rel="shortcut icon" type="image" href="../img/1.png"> 
+    <link rel="stylesheet" href="../css/index.css">
+    <link rel="stylesheet" href="../css/responsive.css">
   
 </head>
 <body>
  
   <!-- heading  -->
 <div class="c1">
-  <img src="24.png" height="100" width="100%">
+  <img src="../img/24.png" height="100" width="100%">
   <div class="c2" >Highway  Police  Maharashtra  State</div>
-  <img id="p1" src="3.png">
-  <img id="p2" src="4.png">
+  <img id="p1" src="../img/3.png">
+  <img id="p2" src="../img/4.png">
 </div> 
 
 
@@ -28,12 +28,13 @@
 <nav class="navbar background h-nav-resp">
   <ul class="nav-list v-class-resp">
       <div class="logo">
-          <img src="5.png" alt="LOGO">
+          <img src="../img/5.png" alt="LOGO">
       </div>
       <li><a href="index.html">Home</a></li>
       <li><a href="TrafficP.html" target="blank">Traffic Police</a></li>
       <li><a href="rules.html" target="blank">Rules</a></li>
       <li><a href="fine.html" target="blank">Traffic Fines</a></li>
+      
   </ul>
   <div class="rightNav v-class-resp">
       <button class="btn btn-sn"><a href="about-us.html" target="blank">About us</a></button> 
@@ -54,7 +55,7 @@
       </div>
       <div class="carousel-inner">
       <div class="carousel-item active">
-      <img src="42.jpg" height="600" width="100%" class="d-block w-100" alt="...">
+      <img src="../img/42.jpg" height="600" width="100%" class="d-block w-100" alt="...">
       <div class="text-carousel"><b>This is highway , not a runway <br>if you drink ,don't drive , if drive then don't drink</b></div>
       </div>
       <div class="carousel-item">
@@ -62,7 +63,7 @@
       <div class="text-carousel" ><b>We drive by the rule <br>Follow traffic rules , save your future </b></div>
       </div>
       <div class="carousel-item">
-      <img src="40.jpg" height="600" width="100%" class="d-block w-100" alt="...">
+      <img src="../img/40.jpg" height="600" width="100%" class="d-block w-100" alt="...">
       <div class="text-carousel"><b>Alert today – Alive tomorrow.<br>Normal speed meets every need.</b></div>
       </div>
        </div>
@@ -79,13 +80,13 @@
 <br><br>
 
     <div class="c7"><br><br>
-      <img id="p11" height="80px" width="80px" src="17.png">
-      <img id="p11" height="80px" width="80px" src="18.png">
-      <img id="p11" height="80px" width="80px" src="19.png">
-      <img id="p11" height="80px" width="80px" src="20.jpg">
-      <img id="p11" height="80px" width="80px" src="21.png">
-      <img id="p11" height="80px" width="80px" src="22.png">
-      <img id="p11" height="80px" width="80px" src="23.png">
+      <img id="p11" height="80px" width="80px" src="../img/17.png">
+      <img id="p11" height="80px" width="80px" src="../img/18.png">
+      <img id="p11" height="80px" width="80px" src="../img/19.png">
+      <img id="p11" height="80px" width="80px" src="../img/20.jpg">
+      <img id="p11" height="80px" width="80px" src="../img/21.png">
+      <img id="p11" height="80px" width="80px" src="../img/22.png">
+      <img id="p11" height="80px" width="80px" src="../img/23.png">
     </div>
 
   
@@ -99,7 +100,7 @@
   </div>  
 
  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-<script src="responsive.js"></script>
+<script src="../js/responsive.js"></script>
 
 </body>
 </html>
