--- a/html/rules.html
+++ b/html/rules.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>www.Rules.com</title>
-    <link rel="shortcut icon" type="image" href="1.png"> 
-    <link rel="stylesheet" href="rules.css">
-    <link rel="stylesheet" href="responsive.css">
+    <link rel="shortcut icon" type="image" href="../img/1.png"> 
+    <link rel="stylesheet" href="../css/rules.css">
+    <link rel="stylesheet" href="../css/responsive.css">
 
 </head>
 <body>
@@ -21,7 +21,7 @@
     <p id="p13">In a country like ours, that is notorious for road accidents and related fatality, it is important <br>for any automobile user to understand and practise road safety rules. Factors such as <br>inappropriate maintenance of vehicles, poor infrastructure and a general disregard for the <br>pedestrians and other drivers on the road has fuelled the incidence of road accidents in India.<br> However, speeding and reckless driving still contribute to majority of the fatalities.<br></p></div>
     <div class="hover03 column">
         <div>
-          <figure><img id="p3" src="33.jpg" /></figure>
+          <figure><img id="p3" src="../img/33.jpg" /></figure>
           <span>Hover</span>
         </div>
     </div>
@@ -30,7 +30,7 @@
     <div class="c2 c">
         <div class="hover03 column">
             <div>
-              <figure><img id="p3"src="34.jpg" height="180px" width="280px" /></figure>
+              <figure><img id="p3" src="../img/34.jpg" height="180px" width="280px" /></figure>
               <span>Hover</span>
             </div>
         </div>
@@ -48,7 +48,7 @@
     <p id="p13">It is important to think about your own safety, just as you would consider the safety of others on the road. You should <br>wear a seatbelt while driving to protect yourself from crashing into the windshield, in the event of a collision. It is <br>also advisable to get all passengers strapped in, even at the backseat.</p></div>
     <div class="hover03 column">
         <div>
-          <figure><img id="p3"src="35.jpg" /></figure>
+          <figure><img id="p3" src="../img/35.jpg" /></figure>
           <span>Hover</span>
         </div>
     </div></div>
@@ -56,7 +56,7 @@
 <div class="c4 c">
     <div class="hover03 column">
         <div>
-          <figure><img id="p3"src="39.jpg" /></figure>
+          <figure><img id="p3" src="../img/39.jpg" /></figure>
           <span>Hover</span>
         </div>
     </div>
@@ -75,7 +75,7 @@
         <p id="p13">It is proven that alcohol impairs the reaction time of the human body. So even if you are feeling fine after a drink, <br>you should refrain from driving as your body is not capable of doing so. You can always request a friend to drive you <br>home or call a taxi instead</p></div>
     <div class="hover03 column">
         <div>
-          <figure><img id="p3" src="36.png" height="190px" width="270px"></figure>
+          <figure><img id="p3" src="../img/36.png" height="190px" width="270px"></figure>
           <span>Hover</span>
         </div>
     </div></div>
@@ -83,7 +83,7 @@
 <div class="c2 c">
     <div class="hover03 column">
         <div>
-          <figure><img id="p3"src="37.jpg" /></figure>
+          <figure><img id="p3" src="../img/37.jpg" /></figure>
           <span>Hover</span>
         </div>
     </div>
@@ -101,7 +101,7 @@
         <p id="p13">On the phone while driving is a punishable crime in India. If you get an emergency call on your phone, you need<br> to pull over to the side of the road and complete the conversation before you resume driving. Other distractions like loud music<br> and attention-demanding kids or pets should also be handled in a way that it does not interrupt a safe journey.<br></p></div>
             <div class="hover03 column">
                 <div>
-                  <figure><img id="p3"src="38.jpg" width="280px" height="180px" /></figure>
+                  <figure><img id="p3" src="../img/38.jpg" width="280px" height="180px" /></figure>
                   <span>Hover</span>
                 </div>
             </div>
