--- a/html/start.html
+++ b/html/start.html
@@ -7,8 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/1c50e71bf8.js" crossorigin="anonymous"></script>
     <title>Document</title>
-    <link rel="stylesheet" href="start.css">
-
+    <link rel="stylesheet" href="../css/start.css">
 </head>
 
 <body>
