--- a/index.html
+++ b/index.html
@@ -28,16 +28,16 @@
 <nav class="navbar background h-nav-resp">
   <ul class="nav-list v-class-resp">
       <div class="logo">
-          <img src="../img/5.png" alt="LOGO">
+          <img src="img/5.png" alt="LOGO">
       </div>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="TrafficP.html" target="blank">Traffic Police</a></li>
-      <li><a href="rules.html" target="blank">Rules</a></li>
-      <li><a href="fine.html" target="blank">Traffic Fines</a></li>
+      <li><a href="../html/index.html">Home</a></li>
+      <li><a href="../html/TrafficP.html" target="blank">Traffic Police</a></li>
+      <li><a href="../html/rules.html" target="blank">Rules</a></li>
+      <li><a href="../html/fine.html" target="blank">Traffic Fines</a></li>
       
   </ul>
   <div class="rightNav v-class-resp">
-      <button class="btn btn-sn"><a href="about-us.html" target="blank">About us</a></button> 
+      <button class="btn btn-sn"><a href="../html/about-us.html" target="blank">About us</a></button> 
   </div>
   <div class="burger">
       <div class="line"></div>
