--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
       <div class="logo">
           <img src="img/5.png" alt="LOGO">
       </div>
-      <li><a href="../html/index.html">Home</a></li>
-      <li><a href="../html/TrafficP.html" target="blank">Traffic Police</a></li>
-      <li><a href="../html/rules.html" target="blank">Rules</a></li>
-      <li><a href="../html/fine.html" target="blank">Traffic Fines</a></li>
+      <li><a href="html/index.html">Home</a></li>
+      <li><a href="html/TrafficP.html" target="blank">Traffic Police</a></li>
+      <li><a href="html/rules.html" target="blank">Rules</a></li>
+      <li><a href="html/fine.html" target="blank">Traffic Fines</a></li>
       
   </ul>
   <div class="rightNav v-class-resp">
