--- a/html/about-us.html
+++ b/html/about-us.html
@@ -30,7 +30,7 @@
           <div class="logo">
               <img src="../img/5.png" alt="LOGO">
           </div>
-          <li><a href="index.html">Home</a></li>
+          <li><a href="../index.html">Home</a></li>
           <li><a href="TrafficP.html" target="blank">Traffic Police</a></li>
           <li><a href="rules.html" target="blank">Rules</a></li>
           <li><a href="fine.html" target="blank">Traffic Fines</a></li>
